--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
             <div>Image vient de <a href="https://www.fr.freepik.com" target="_blank">Freepik</a></div>
         </div>
         <div class="middle">
-            <h1>Gift Voucher 30% OFF</h1>
+            <h2>Gift Voucher <span>30%</span> OFF</h2>
         </div>
     </section>
 </body>
