--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
         </div>
         <div class="middle">
             <h2>Gift Voucher <span>30%</span> OFF</h2>
+            <div>Image vient de <a href="https://www.fr.freepik.com" target="_blank">Freepik</a></div>
         </div>
     </section>
 </body>
