--- a/index.html
+++ b/index.html
@@ -35,14 +35,51 @@
         </div>
     </header>
     <section class="banner">
-        <div class="container">
-            <h1>Grilled Skeewers</h1>
-            <p>Hot and Delicious</p>
-            <div>Image vient de <a href="https://www.fr.freepik.com" target="_blank">Freepik</a></div>
+        <div class="one_part">
+            <div class="head">
+                <h1><span>Gril</span>led <span>Ske</span>ewers</h1>
+                <p>Hot and Delicious</p>
+                <div>Image vient de <a href="https://www.fr.freepik.com" target="_blank">Freepik</a></div>
+            </div>
+            <div class="middle">
+                <h2>Gift Voucher <span>30%</span> OFF</h2>
+                <p>Voucher code: <span>65656</span></p>
+                <div>Image vient de <a href="https://www.fr.freepik.com" target="_blank">Freepik</a></div>
+            </div>
+            <div class="footer">
+                <h1><span>BBQ </span>Party</h1>
+                <p class="paragraph">Article evident arrived express highest men did boy. Mistress sensible entirely am so. Quick can manor smart money hopes worth too. Comfort produce husband boy her had hearing. Law others theirs passed but wishes. You day real less till dear read. Considered use dispatched melancholy sympathize discretion led. Oh feel if up to till like. </p>
+                <p class="delicious">Hot and Delicious</p>
+                <div>Image vient de <a href="https://www.fr.freepik.com" target="_blank">Freepik</a></div>
+            </div>
+            <div class="footer_two">
+                <h1>discover <span>our menu</span></h1>
+                <p>Meet and Fish</p>
+                <div>Image vient de <a href="https://www.fr.freepik.com" target="_blank">Freepik</a></div>
+            </div>
         </div>
-        <div class="middle">
-            <h2>Gift Voucher <span>30%</span> OFF</h2>
-            <div>Image vient de <a href="https://www.fr.freepik.com" target="_blank">Freepik</a></div>
+    </section>
+    <section class="two_part">
+        <div class="box_image">
+            <div class="box_container">
+                <img src="./image/brochette.png" alt="">
+                <div class="text">
+                    <p>Hen and vegetables </p><br><span>$15</span>
+                </div>
+            </div>
+            <div class="box_container">
+                <img src="./image/poulet.png" alt="">
+
+                <div class="text">
+                    <P>Grilled chicken </P><br><span>$40</span>
+                </div>
+            </div>
+            <div class="box_container">
+                <img src="./image/poisson.png" alt="">
+                <div class="text">
+                    <p>Beef steak </p><br><span>$25</span>
+                </div>
+            </div>
         </div>
     </section>
 </body>
